# quote-verbatim-qa

./: .gitignore  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
integrations/: USAGE.md
scripts/: verify_quotes.py
src/quote_verifier/: cli.py
tests/: test_core.py
