[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quote-verbatim-qa"
version = "0.1.0"
description = "Validate table quote fields against source PDF text."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
quote-verify = "quote_verifier.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
